--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "name": "TwilioTest",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
-    "postinstall": "flex-plugin pre-script-check"
+    "postinstall": "flex-plugin pre-script-check",
+    "start": "twilio flex:plugins:start",
+    "build": "twilio flex:plugins:build",
+    "deploy": "twilio flex:plugins:deploy --changelog=\"change have been made\"",
+    "release": "twilio flex:plugins:release --enable-plugin TwilioTest@latest"
   },
   "dependencies": {
-    "@twilio/flex-plugin-scripts": "6.3.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "prop-types": "^15.7.2",
     "@twilio-paste/core": "^10.14.0",
-    "@twilio-paste/icons": "^5.7.0"
+    "@twilio-paste/icons": "^5.7.0",
+    "@twilio/flex-plugin-scripts": "6.3.2",
+    "axios": "^0.21.4",
+    "craco-config-flex-plugin": "latest",
+    "flex-plugin": "latest",
+    "flex-plugin-scripts": "latest",
+    "prop-types": "^15.7.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@twilio/flex-ui": "2.6.1",
